# fishing-toolkit-updated

./: README.md  config.py  cyclone_impact_toolkit.spec  main.py  pyproject.toml  test_navigation.html  test_unified_app.py
backend/: __init__.py  repositories.py  services.py
backend/api/: __init__.py  base_api.py  historical_api.py  nowcast_api.py
backend/repositories/: base_repository.py  historical_repository.py  nowcast_repository.py
backend/services/: historical.py  historical_db_update.py  nowcast.py  nowcast_db_update.py
backend/utils/: auth.py  helper.py  logger.py  utils.py
data/: README.md
data/inputs/gis/countries/phl/baselines/: avg_daily_boats_noty_phl_2023.csv  baseline_nowcast.csv  no_ty_file_pivoted_avg_per_contour.csv
data/inputs/gis/countries/phl/centroids/: polygon_centroids_historical.csv
database/: historical.json  nowcast.json
frontend/static/: index.html
frontend/static/css/: app.css
frontend/static/historical/: index.html
frontend/static/historical/css/: dashboard.css
frontend/static/historical/data/: historical_output_2024.csv  phl_boatdiff2_2023.csv  phl_boatdiff2_2024.csv  sample_track_2024.csv
frontend/static/historical/js/: dashboard.js
frontend/static/js/: app.js
frontend/static/nowcast/: debug.html  index.html
frontend/static/nowcast/css/: dashboard.css
frontend/static/nowcast/data/: Track 1.csv  fishing-grounds.json  typhoon.json  typhoon_track_points.dbf  typhoon_track_points.shp  typhoon_track_points.shx
frontend/static/nowcast/js/: dashboard.js
frontend/static/welcome/css/: welcome.css
scripts/: create_historical_db.py  create_nowcast_db.py  etl_historical_data.py  fix_nowcast_db.py
tests/: __init__.py
(+1 files in other folders)
